--- a/package.json
+++ b/package.json
@@ -33,6 +33,12 @@
   },
   "homepage": "https://github.com/i-mostafa/monfact#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "typescript": "^4.4.3"
+  },
+  "dependencies": {
+    "experr": "^1.1.7",
+    "joi": "^17.4.2"
   }
 }
