--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+lib
+tests
+types
 
 # TypeScript v1 declaration files
 typings/
