--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@types/mongodb": "^4.0.7",
     "experr": "^1.1.7",
     "joi": "^17.4.2"
   }
